# mjcf_urdf_simple_converter

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
mjcf_urdf_simple_converter/: __init__.py  mjcf_urdf_simple_converter.py
tests/: test_conversion.py  test_mesh_export.py  test_multiple_mesh_colors.py
tests/data/: mesh_mjcf.xml  multi_color_mjcf.xml  simple_mjcf.xml
tests/sample_mjcf/: README.md  base.stl  link1.stl  link2.stl  my_robot.xml
