[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="mjcf_urdf_simple_converter"
dynamic = ["version"]
authors = [{name="Yasunori Toshimitsu", email="yasu313nori@gmail.com"}]
description = "Minimal script to convert MuJoCo MJCF robot model files to URDF files usable in ROS"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["scipy", "numpy-stl", "mujoco"]

[project.urls]
"Homepage" = "https://github.com/Yasu31/mjcf_urdf_simple_converter"
Changelog = "https://github.com/Yasu31/mjcf_urdf_simple_converter/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "mjcf_urdf_simple_converter.__init__.__version__"}